--- a/Interview/Interview.csproj
+++ b/Interview/Interview.csproj
@@ -11,7 +11,7 @@
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <AssemblyVersion>1.0.73.6739</AssemblyVersion>
+    <AssemblyVersion>1.0.80.6739</AssemblyVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntryPoint.cs" />
+    <Compile Include="IGS.Exam\Mahjong\Main.cs" />
     <Compile Include="IGS.Exam\Mahjong\Models\Cards\Card.cs" />
     <Compile Include="IGS.Exam\Mahjong\Models\Cards\CardFactory.cs" />
     <Compile Include="IGS.Exam\Mahjong\Models\Cards\CardType.cs" />
@@ -50,7 +52,8 @@
     <Compile Include="IGS.Exam\Mahjong\Collections\MatchSet.cs" />
     <Compile Include="IGS.Exam\Mahjong\Models\Cards\NCard.cs" />
     <Compile Include="IGS.Exam\Mahjong\Models\Player.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Launcher.Main.cs" />
+    <Compile Include="Launcher.Instance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IGS.Exam\Mahjong\Collections\RandomSet.cs" />
     <Compile Include="IGS.Exam\Mahjong\Interpreter\RuleSet.cs" />
