--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 image: Visual Studio 2017
-platform: x86
+platform: Any CPU
 configuration: DEBUG
 before_build:
   - nuget restore
